[metadata]
name = postqf
description = Postfix queue data filter
classifiers =
  Development Status :: 4 - Beta
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Programming Language :: Python :: 3.7
  Topic :: System :: Systems Administration
  Topic :: Utilities
author_email = postqf@seichter.de
url = https://github.com/rseichter/postqf
version = 0.1.dev1

[options]
packages = find:
