[metadata]
author = Ralph Seichter
author_email = postqf@seichter.de
classifiers =
  Development Status :: 4 - Beta
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Operating System :: OS Independent
  Programming Language :: Python :: 3.7
  Topic :: System :: Systems Administration
  Topic :: Utilities
description = User-friendly Postfix queue data filter
long_description = file: README.md
long_description_content_type = text/markdown
name = postqf
url = https://github.com/rseichter/postqf
version = 0.3.dev251843

[options]
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
  postqf = postqf.core:main
